use java 8 friendly apis (#322)